Updated content and images

--- a/_posts/2018-10-03-main.md
+++ b/_posts/2018-10-03-main.md
@@ -1,16 +1,22 @@
 ---
 layout: post
 title: Main
-cover: cover.jpg
+cover: az_sunset.jpg
 categories: posts
 ---
 
 ## Bio
 
-I spent my undergraduate career at Tucson, Arizona attending The University of Arizona. I began studying Physics but soon switched to Psychology. Through my research experience I gained an appreciation for Computer Science and started taking some programming courses from which I was hooked on programming. Ever since then I've been finding ways to incorporate the two into my research which is how I have found my way to University of California-Santa Cruz researching Human-Computer Interaction.
+I spent my undergraduate career at the University of Arizona in Tucson, Arizona. I began studying Physics but soon switched to Psychology and Sociology. Through my research experience, I gained an appreciation for Computer Science and got hooked on programming. Ever since I've been incorporating the two into my research which is how I have found my way to University of California at Santa Cruz within the [Human-Computer Interaction Lab](https://people.ucsc.edu/~swhittak/Steve_Whittaker_Santa_Cruz_HCI/HCI_Lab_People.html) headed by [Steve Whittaker](https://people.ucsc.edu/~swhittak/Steve_Whittaker_Santa_Cruz_HCI/Steve_Whittaker.html).
 
 I am interested in how individual and social behavior can be explained by large scale data analysis. My thesis is centered on the study of the behaviors, interactions, influences, and changes that individuals of certain social roles go through in an online community. This encompasses four main areas of research.
 
-## Open Sourced on GitHub
+## Recent Updates
 
-Flex is open sourced on GitHub and is licensed under the [MIT License](http://opensource.org/licenses/MIT). Feel free to contribute to it anytime!
+Paper Accepted to [CSCW 2018](https://cscw.acm.org/2018/index.html). Living in the Present: Understanding Long-Term Content Referencing in Enterprise Online Communities. 
+
+Collaborative work with [Humanyze](https://www.humanyze.com/) submitted to WSDM 2019.
+
+Medium post on the exploration of Progressive Web Apps while at eBay in Summer 2017. [Manifest Destiny.](https://medium.com/ebaydesign/manifest-destiny-92cdace24869) 
+
+
